--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "C:\\Users\\chris\\.virtualenvs\\car-trims-api-iWkpUz6L\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\chris\\.virtualenvs\\car-trims-api-iWkpUz6L\\Scripts\\python.exe",
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    "python.linting.banditEnabled": false
 }
