--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ flask-sqlalchemy = "*"
 flask-marshmallow = "*"
 marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+flask-cors = "*"
 
 [requires]
 python_version = "3.7"
